--- a/package.json
+++ b/package.json
@@ -18,7 +18,11 @@
 		"markdown-it": "12.3.2",
 		"markdown-it-anchor": "^8.1.0",
 		"markdown-it-emoji": "^2.0.2",
+		"markdown-it-footnote": "^3.0.3",
+		"markdown-it-metadata-block": "^1.0.2",
+		"markdown-it-task-list-plus": "^2.1.3",
 		"markdown-it-toc-done-right": "^4.2.0",
+		"markdown-it-yaml": "^1.0.0",
 		"mustache": "4.0.1",
 		"puppeteer": "13.5.1",
 		"request": "^2.88.2"
